updating .gitignore, pom amd mapper